--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "victory-native": "^36.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
